--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <option value="m">Metro(s)</option>
             <option value="km">Quilômetro(s)</option>
             <option value="cm">Centímetro(s)</option>
-            <option value="mm">milímetro(s)</option>
+            <option value="mm">Milímetro(s)</option>
         </select>
     </div>
     <div class="input-group">
@@ -30,7 +30,7 @@
             <option value="m">Metro(s)</option>
             <option value="km">Quilômetro(s)</option>
             <option value="cm">Centímetro(s)</option>
-            <option value="mm">milímetro(s)</option>
+            <option value="mm">Milímetro(s)</option>
         </select>
     </div>
     <button id="convert-btn">Converter</button>
